# tiny_rasterizer

./: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp  rasterizer_BlinnPhong.cpp  rasterizer_drawLine.cpp  rasterizer_drawTriangle.cpp  triangle.cpp  triangle.hpp
